- Fixes `Forced Default` Config Settings
  * Forced Defaults, typically based on firmware type, could be skipped under some circumstances
  * This gap has now been closed
- Fixes Invalid `ShowTools` Entry Handling
  * Such invalid entries were previously only flagged and not actually handled
  * These are now additionally skipped
- Improves `DefaultSelection` Feature
  * A substring match is now only attempted if an exact match fails
- Improves CSR Handling
  * Multiple tweaks to improve handling CSR settings
  * Includes improvements to the `DynamicCSR` feature
- Improves `System Shutdown/Restart` Handling
  * Now displays a confirmation input screen before execution
- Improves Misc Graphics Handling
  * Improves graphics related memory management
  * Improves UGA support via new `PassGopThrough` feature (Not user configurable)
- Amends `Big Selection Image` Size Filtering
  * The maximum Big Selection image size is increased to 320px from 256px
  * The Small Selection image maximum is maintained at 256px
- Amends `Invalid UEFI Versions` Handling
  * Now accounts for such by reducing the amendment threshold to UEFI 2.0
  * Still amends to UEFI 2.3 when UEFI amendments happen
  * No longer amends Runtime Services for UEFI amendments
  * No longer disables certain features on detecting inconsistent versions
  * No longer displays a warning messages and the discrepancy is only logged
  * Fixes Memory Conflict in 'Invalid EFI Versions' Debug Logging
    - The DBG build had an invalid memory allocation instance that results in a hang when logging detection
    - Improved overall handling by reducing the items disabled on detection
- Amends and Refactors Misc Items
  * General optimisation
  * Memory management improvements and fixes
- Amends `ScanAllESP` Feature
  * Now aligned with upstream implementation and scans all ESPs by default
  * Hence, the "Opt-Out" `decline_esp_filter` token has been replaced by an "Opt-In `enable_esp_filter` token